# scratch

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  requirements.md
apps/entitlements/: Cargo.toml
apps/entitlements/src/: binary.rs  data.rs  json.rs  lib.rs  main.rs  transform.rs
apps/flatten/: Cargo.toml
apps/flatten/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  mongo.rs
