[package]
name = "entitlements"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
maplit = "1.0"
rkyv = { version = "0.7", features = ["validation", "size_64", "std"], default-features = false }
anyhow = "1.0"
itertools = "0.13"
futures = "0.3"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
mongodb = { version = "2", features = [] }
bson = "2"
clap = { version = "4", features = ["derive"] }

clickhouse = "0.11"
common = { workspace = true }
